Fix bug: SVG is no more cropped

--- a/app/style.css
+++ b/app/style.css
@@ -1,5 +1,6 @@
 body {
   height: 3000px;
+  margin: 0;
 }
 
 .funky-element {
